@@ -161,6 +161,7 @@ public class InstrumentMaking extends EnhancedCraftingSkill implements ItemCraft
 							commonEmote(mob,L("<S-NAME> fail(s) to learn how to make @x1.",buildingI.name()));
 						else
 							commonEmote(mob,L("<S-NAME> mess(es) up making @x1.",buildingI.name()));
+						dropALoser(mob,buildingI);
 						buildingI.destroy();
 					}
 					else
