@@ -170,13 +170,17 @@ public class JewelMaking extends EnhancedCraftingSkill implements ItemCraftor, M
 						if(activity == CraftingActivity.LEARNING)
 						{
 							commonEmote(mob,L("<S-NAME> fail(s) to learn how to make @x1.",buildingI.name()));
+							dropALoser(mob,buildingI);
 							buildingI.destroy();
 						}
 						else
 						if(activity == CraftingActivity.REFITTING)
 							commonEmote(mob,L("<S-NAME> mess(es) up refitting @x1.",buildingI.name()));
 						else
+						{
 							commonEmote(mob,L("<S-NAME> mess(es) up @x1.",verb));
+							dropALoser(mob,buildingI);
+						}
 					}
 					else
 					{
