@@ -154,6 +154,7 @@ public class Pottery extends EnhancedCraftingSkill implements ItemCraftor
 							commonEmote(mob,L("<S-NAME> fail(s) to learn how to make @x1.",buildingI.name()));
 						else
 							commonEmote(mob,L("<S-NAME> mess(es) up @x1.",buildingI.name()));
+						dropALoser(mob,buildingI);
 						buildingI.destroy();
 					}
 					else
