@@ -137,10 +137,14 @@ public class ScrimShaw extends EnhancedCraftingSkill implements ItemCraftor, Men
 						if(activity == CraftingActivity.LEARNING)
 						{
 							commonEmote(mob,L("<S-NAME> fail(s) to learn how to make @x1.",buildingI.name()));
+							dropALoser(mob,buildingI);
 							buildingI.destroy();
 						}
 						else
+						{
 							commonTelL(mob,"<S-NAME> mess(es) up scrimshawing @x1.",buildingI.name(mob));
+							dropALoser(mob,buildingI);
+						}
 					}
 					else
 					{
