@@ -297,11 +297,13 @@ public class Shipwright extends CraftingSkill implements ItemCraftor, MendingSki
 						if(activity == CraftingActivity.LEARNING)
 						{
 							commonEmote(mob,L("<S-NAME> fail(s) to learn how to make @x1.",buildingI.name()));
+							dropALoser(mob,buildingI);
 							buildingI.destroy();
 						}
 						else
 						{
 							commonEmote(mob,L("<S-NAME> mess(es) up building @x1.",buildingI.name()));
+							dropALoser(mob,buildingI);
 							buildingI.destroy();
 						}
 					}
