@@ -129,10 +129,14 @@ public class Textiling extends EnhancedCraftingSkill implements ItemCraftor, Men
 						if(activity == CraftingActivity.LEARNING)
 						{
 							commonEmote(mob,L("<S-NAME> fail(s) to learn how to make @x1.",buildingI.name()));
+							// this space intentionally left blank
 							buildingI.destroy();
 						}
 						else
+						{
+							// this space intentionally left blank
 							commonEmote(mob,L("<S-NAME> mess(es) up weaving @x1.",buildingI.name()));
+						}
 					}
 					else
 					{
