@@ -129,6 +129,7 @@ public class Torturesmithing extends EnhancedCraftingSkill implements ItemCrafto
 							commonEmote(mob,L("<S-NAME> fail(s) to learn how to make @x1.",buildingI.name()));
 						else
 							commonTelL(mob,"You've ruined @x1!",buildingI.name(mob));
+						dropALoser(mob,buildingI);
 						buildingI.destroy();
 					}
 					else
