@@ -33,6 +33,7 @@
  31. New command: Calendar, plus auto-notifications for the start of Holidays in channels.
  32. Painting skill now has recipes file.
  33. GenAbility affect adjustments and tick override now support variables.
+ 34. Messing up a crafting skill results in a Ruined item instead of nothing.
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
